# computer-vision-algorithms

./: .gitignore
change_perspective/: CMakeLists.txt
change_perspective/input/: pretty_evie_2.txt  pretty_evie_3.txt  watching_tv_2.txt
change_perspective/src/: ApplyHomography.cpp  todo.txt
estimate_homography/: CMakeLists.txt
estimate_homography/include/: homography.hpp
estimate_homography/input/: fat_peeka.txt  fat_peeka_1.txt  fat_peeka_2.txt  fat_peeka_3.txt  jackie1.txt  jackie2.txt  jackie_1.txt  jackie_2.txt  jackie_3.txt  pretty_evie.txt  pretty_evie_1.txt  watching_tv.txt  watching_tv_1.txt  watching_tv_3.txt
estimate_homography/src/: ApplyHomography.cpp  homography.cpp
feature_matching/: CMakeLists.txt  match_features
feature_matching/src/: match_features.cpp
harris-stephens/: CMakeLists.txt  detect_corner  match_features  todo.txt
harris-stephens/input/: checkerboard.txt  pair1.txt  pair2.txt
harris-stephens/src/: detect_corner.cpp  match_features.cpp
mvg_lib/: CMakeLists.txt
mvg_lib/include/: mvg.h
mvg_lib/src/: mvg.cpp
panorama/: CMakeLists.txt
panorama/src/: panorama.cpp
perspective_distortion_orthogonal_line_pairs/: CMakeLists.txt  notes.md
perspective_distortion_orthogonal_line_pairs/input/: 1-onestep.txt  1-twostep.txt  2-onestep.txt  2-twostep.txt  3-circle.txt  4-circle.txt
perspective_distortion_orthogonal_line_pairs/src/: Circle.cpp  OneStep.cpp  TwoStep.cpp  notes.txt
perspective_distortion_point_correspondences/: CMakeLists.txt  points.txt  todo.txt
perspective_distortion_point_correspondences/input/: adams01.txt  adams02.txt  adams03.txt  adams04.txt  adams05.txt  adams06.txt  adams07.txt  board01.txt  board02.txt  board03.txt  board04.txt  door01.txt  door02.txt
perspective_distortion_point_correspondences/src/: ProjectiveDistortion.cpp  homography.cpp
