cmake_minimum_required(VERSION 2.8)
project( ApplyHomography )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( include )
add_executable( ApplyHomography src/ApplyHomography.cpp src/homography.cpp)
target_link_libraries( ApplyHomography ${OpenCV_LIBS})
set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
