cmake_minimum_required(VERSION 2.8)
project(detect_corner)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/../mvg_lib/include include)
add_executable(detect_corner src/detect_corner.cpp)
target_link_libraries(detect_corner ${OpenCV_LIBS} ${CMAKE_SOURCE_DIR}/../mvg_lib/libMVG.so)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
