cmake_minimum_required(VERSION 2.8)
project( ProjectiveDistortion2 )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( include )
add_executable( TwoStep src/TwoStep.cpp src/homography.cpp)
add_executable( OneStep src/OneStep.cpp src/homography.cpp)
add_executable( Circle src/Circle.cpp src/homography.cpp)
target_link_libraries( TwoStep ${OpenCV_LIBS})
target_link_libraries( OneStep ${OpenCV_LIBS})
target_link_libraries( Circle ${OpenCV_LIBS})
set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
