cmake_minimum_required(VERSION 2.8)
project( ProjectiveDistortion2 )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} include ${CMAKE_SOURCE_DIR}/../mvg_lib/include)
add_executable( TwoStep src/TwoStep.cpp)
add_executable( OneStep src/OneStep.cpp)
add_executable( Circle src/Circle.cpp)
target_link_libraries( TwoStep ${OpenCV_LIBS} ${CMAKE_SOURCE_DIR}/../mvg_lib/libMVG.so)
target_link_libraries( OneStep ${OpenCV_LIBS} ${CMAKE_SOURCE_DIR}/../mvg_lib/libMVG.so)
target_link_libraries( Circle ${OpenCV_LIBS} ${CMAKE_SOURCE_DIR}/../mvg_lib/libMVG.so)
set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
