cmake_minimum_required(VERSION 2.8)
project( ProjectiveDistortion )
find_package( OpenCV REQUIRED )
include_directories(${OpenCV_INCLUDE_DIRS} include ${CMAKE_SOURCE_DIR}/../mvg_lib/include)
add_executable( ProjectiveDistortion src/ProjectiveDistortion.cpp)
target_link_libraries( ProjectiveDistortion ${OpenCV_LIBS} ${CMAKE_SOURCE_DIR}/../mvg_lib/libMVG.so)
set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
